<resources>
    <string name="app_name">AccelCSVBluetooth</string>
    <string name="string1">Measure Time</string>
    <string name="string2">Measure Tick</string>

    <string-array name="times">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="min">Minutes</string>
    <string name="sec">Seconds</string>

    <string-array name="ticks">
        <item>5</item>
        <item>15</item>
        <item>30</item>
    </string-array>

    <string name="butt">START</string>
    <string name="butt2">SAVE</string>

    <string name="bluestart">SEND FILE</string>

    <string name="connect">SEARCH FOR DEVICES</string>
    <string name="send">DISCONNECT</string>
    <string name="status">Connected to:</string>
    <string name="listConnected">Bonded Devices</string>
    <string name="listNew">New Devices</string>
</resources>
